--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "微信云托管 koa 框架模板",
   "main": "index.js",
   "scripts": {
-    "start": "nest start --watch",
-    "serve": "nest build && node ./dist/main.js"
+    "start": "cross-env NODE_ENV=development nest start --watch",
+    "serve": "nest build && node ./dist/main.js",
+    "eslint": "eslint --fix --max-warnings 0 --ext .ts,.js ./"
   },
   "author": "",
   "license": "Apache-2.0",
@@ -18,6 +19,8 @@
     "@nestjs/platform-express": "9.3.12",
     "@nestjs/typeorm": "9.0.1",
     "body-parser": "^1.19.1",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
@@ -35,6 +38,14 @@
     "@types/koa-logger": "^3.1.2",
     "@types/koa-router": "^7.4.4",
     "@types/node": "^20.2.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "prettier": "^2.8.4"
   }
 }
