--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@nestjs/platform-express": "9.3.12",
     "@nestjs/typeorm": "9.0.1",
     "body-parser": "^1.19.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
+    "hashids": "^2.3.0",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
