--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@types/koa-logger": "^3.1.2",
     "@types/koa-router": "^7.4.4",
     "@types/node": "^20.2.1",
-    "typescript": "^5.0.4",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "eslint": "^8.36.0",
@@ -49,6 +48,16 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "prettier": "^2.8.4"
+    "husky": "^8.0.3",
+    "prettier": "^2.8.4",
+    "typescript": "^5.0.4"
+  },
+  "lint-staged": {
+    "*.{ts}": [
+      "npm run eslint"
+    ],
+    "*.{less,json,html}": [
+      "prettier --write"
+    ]
   }
 }
