--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@nestjs/common": "9.3.12",
     "@nestjs/core": "9.3.12",
+    "@nestjs/jwt": "^10.0.3",
     "@nestjs/platform-express": "9.3.12",
     "@nestjs/typeorm": "9.0.1",
     "body-parser": "^1.19.1",
@@ -55,11 +56,8 @@
     "typescript": "^5.0.4"
   },
   "lint-staged": {
-    "*.{ts}": [
+    "*.ts": [
       "npm run eslint"
-    ],
-    "*.{less,json,html}": [
-      "prettier --write"
     ]
   }
 }
