--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.19.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "hashids": "^2.3.0",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^9.5.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/koa": "^2.13.6",
     "@types/koa-bodyparser": "^4.3.10",
