--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "wxcloudrun-koa",
+  "name": "wxcloudrun",
   "version": "1.0.0",
-  "description": "微信云托管 koa 框架模板",
+  "description": "微信云托管nest框架",
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development nest start --watch",
@@ -27,10 +27,6 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "hashids": "^2.3.0",
-    "koa": "^2.13.4",
-    "koa-bodyparser": "^4.3.0",
-    "koa-logger": "^3.2.1",
-    "koa-router": "^10.1.1",
     "mysql2": "^2.3.3",
     "rxjs": "^7.8.1",
     "sequelize": "^6.13.0",
@@ -40,10 +36,6 @@
     "@nestjs/cli": "^9.5.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
-    "@types/koa": "^2.13.6",
-    "@types/koa-bodyparser": "^4.3.10",
-    "@types/koa-logger": "^3.1.2",
-    "@types/koa-router": "^7.4.4",
     "@types/node": "^20.2.1",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
