--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nestjs/core": "9.3.12",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/platform-express": "9.3.12",
+    "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "9.0.1",
     "body-parser": "^1.19.1",
     "class-transformer": "^0.5.1",
@@ -47,6 +48,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.4",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "lint-staged": {
