--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "hashids": "^2.3.0",
+    "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
     "rxjs": "^7.8.1",
     "sequelize": "^6.13.0",
@@ -37,6 +38,7 @@
     "@nestjs/cli": "^9.5.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^20.2.1",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
