--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "es6",
     "module": "commonjs",
     "lib": ["es6"],
-    "outDir": "dist",
+    "outDir": "./dist",
     "rootDir": "src",
     "esModuleInterop": true,
     "resolveJsonModule": true,
