--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
+    "jsx": "react",
     "baseUrl": "./",
     "target": "es2017",
     "module": "commonjs",
     "lib": [
-      "es2017"
+      "es2017",
+      "dom"
     ],
     "outDir": "./dist",
     "esModuleInterop": true,
@@ -36,7 +38,4 @@
       ]
     }
   },
-  "exclude": [
-    "node_modules"
-  ]
 }
