--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,8 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.3",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
