--- a/web/package.json
+++ b/web/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "swagger": "ts-node --esm ./tool/load-swagger.ts && npx openapi-typescript@5.4.1 swagger.json --output ./src/types/swagger.ts && ts-node --esm ./tool/format-swagger.ts"
   },
   "dependencies": {
     "antd": "^5.6.1",
     "axios": "^1.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
