--- a/web/package.json
+++ b/web/package.json
@@ -4,17 +4,21 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --force",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "swagger": "ts-node --esm ./tool/load-swagger.ts && npx openapi-typescript@5.4.1 swagger.json --output ./src/types/swagger.ts && ts-node --esm ./tool/format-swagger.ts"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.22.5",
     "antd": "^5.6.1",
     "axios": "^1.4.0",
+    "mobx": "5.15.7",
+    "mobx-react": "5.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "vite-plugin-babel": "^1.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
