--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "target": "es5",
+    "useDefineForClassFields": false,
+    "lib": ["es5", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
 
