--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@babel/plugin-proposal-decorators": "^7.22.5",
     "antd": "^5.6.1",
     "axios": "^1.4.0",
+    "ladash": "^1.2.0",
     "mobx": "5.15.7",
     "mobx-react": "5.4.4",
     "react": "^18.2.0",
