feat: support config type

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,5 +40,10 @@
       }
     }
   ],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
   "ignorePatterns": ["js/*", "lib/*", "dist/*"]
 }
