feat: add common config service

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^16.0.3",
     "hashids": "^2.3.0",
     "lodash": "^4.17.21",
+    "module": "^1.2.5",
     "mysql2": "^2.3.3",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.16"
