--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@nestjs/platform-express": "9.3.12",
     "@nestjs/serve-static": "^3.0.1",
     "@nestjs/swagger": "^6.3.0",
-    "@nestjs/typeorm": "9.0.1",
+    "@nestjs/typeorm": "^10.0.0",
     "body-parser": "^1.19.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -33,9 +33,9 @@
     "hashids": "^2.3.0",
     "lodash": "^4.17.21",
     "module": "^1.2.5",
-    "mysql2": "^2.3.3",
+    "mysql2": "2.3.3",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.16"
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.5.0",
